--- a/.travis.yml
+++ b/.travis.yml
@@ -50,10 +50,12 @@ matrix:
 before_install:
   # Start virtual display server
   - Xvfb $DISPLAY &
-  - sudo apt-get update
-  - sudo apt-get install binutils-2.26
-  - sudo ln -sf /usr/lib/binutils-2.26/bin/* /usr/bin/
-  - sudo ln -sf /usr/lib/binutils-2.26/ldscripts/* /usr/lib/ldscripts/
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+          sudo apt-get update
+          sudo apt-get install binutils-2.26
+          sudo ln -sf /usr/lib/binutils-2.26/bin/* /usr/bin/
+          sudo ln -sf /usr/lib/binutils-2.26/ldscripts/* /usr/lib/ldscripts/
+    fi
   - chmod +x .travis.install.py 
 
 install:
