--- a/.travis.yml
+++ b/.travis.yml
@@ -51,10 +51,10 @@ before_install:
   # Start virtual display server
   - Xvfb $DISPLAY &
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-          sudo apt-get update
-          sudo apt-get install binutils-2.26
-          sudo ln -sf /usr/lib/binutils-2.26/bin/* /usr/bin/
-          sudo ln -sf /usr/lib/binutils-2.26/ldscripts/* /usr/lib/ldscripts/
+          sudo apt-get update;
+          sudo apt-get install binutils-2.26;
+          sudo ln -sf /usr/lib/binutils-2.26/bin/* /usr/bin/;
+          sudo ln -sf /usr/lib/binutils-2.26/ldscripts/* /usr/lib/ldscripts/;
     fi
   - chmod +x .travis.install.py 
 
