--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ os:
   - windows
 
 env:
-  global:
-    - WINEPREFIX=~/.winelaz
-    - DISPLAY=:99.0
+  # global:
+  #   - WINEPREFIX=~/.winelaz
+  #   - DISPLAY=:99.0
   matrix:
    # - LAZ_PKG=true  # Use the latest version from the default package manager
     - LAZ_VER=1.6 # Use specific (binary) release
@@ -49,14 +49,14 @@ env:
 
 before_install:
   # Start virtual display server
-  - Xvfb $DISPLAY &
+  # - Xvfb $DISPLAY &
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
           sudo apt-get update;
           sudo apt-get install binutils-2.26;
           sudo ln -sf /usr/lib/binutils-2.26/bin/* /usr/bin/;
           sudo ln -sf /usr/lib/binutils-2.26/ldscripts/* /usr/lib/ldscripts/;
     fi
-  - chmod +x .travis.install.py 
+  # - chmod +x .travis.install.py 
 
 install:
   # Install prerequisites (fpc/lazarus/wine/qemu)
