--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ language:
    - go
 
 env:
-  # global:
-  #   - WINEPREFIX=~/.winelaz
-  #   - DISPLAY=:99.0
+  global:
+    - WINEPREFIX=~/.winelaz
+    - DISPLAY=:99.0
   matrix:
    # - LAZ_PKG=true  # Use the latest version from the default package manager
     - LAZ_VER=1.6 # Use specific (binary) release
@@ -51,8 +51,13 @@ env:
 #    #   env: LAZ_VER=2.0RC1 LAZ_ENV=qemu-arm LAZ_OPT="--os=linux --cpu=arm"
 
 before_install:
-  # Start virtual display server
-  # - Xvfb $DISPLAY &
+  Start virtual display server
+  - Xvfb $DISPLAY &
+
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
+          choco install python
+    fi
+
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
           sudo apt-get update;
           sudo apt-get install binutils-2.26;
