--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ before_install:
   - Xvfb $DISPLAY &
 
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
-          choco install python
+          choco install python;
     fi
 
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
