--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ env:
 #    #   env: LAZ_VER=2.0RC1 LAZ_ENV=qemu-arm LAZ_OPT="--os=linux --cpu=arm"
 
 before_install:
-  Start virtual display server
+#  Start virtual display server
   - Xvfb $DISPLAY &
 
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
