--- a/.travis.yml
+++ b/.travis.yml
@@ -52,10 +52,13 @@ env:
 
 before_install:
 #  Start virtual display server
-  - Xvfb $DISPLAY &
+  - if [ "$TRAVIS_OS_NAME" != "windows" ]; then
+          - Xvfb $DISPLAY &
+    fi
 
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
           choco install python;
+          refreshenv;
     fi
 
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
