--- a/.travis.yml
+++ b/.travis.yml
@@ -53,22 +53,18 @@ before_install:
           - Xvfb $DISPLAY &
     fi
 
-    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
+          choco install python3
+          export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
+          python -m pip install --upgrade pip wheel
+    fi
+
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
           sudo apt-get update;
           sudo apt-get install binutils-2.26;
           sudo ln -sf /usr/lib/binutils-2.26/bin/* /usr/bin/;
           sudo ln -sf /usr/lib/binutils-2.26/ldscripts/* /usr/lib/ldscripts/;
     fi
-
-    - os: windows
-      # language: sh
-      python: "3.7"
-      before_install:
-        - choco install python3
-        - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
-        - python -m pip install --upgrade pip wheel
-
-
   # - chmod +x .travis.install.py 
 
 install:
