--- a/.travis.yml
+++ b/.travis.yml
@@ -54,9 +54,9 @@ before_install:
     fi
 
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
-          choco install python3
-          export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
-          python -m pip install --upgrade pip wheel
+          choco install python3;
+          export PATH="/c/Python37:/c/Python37/Scripts:$PATH";
+          python -m pip install --upgrade pip wheel;
     fi
 
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
