--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ before_install:
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
           choco install python3;
           export PATH="/c/Python37:/c/Python37/Scripts:$PATH";
+          export PATH=/c/lazarus:"$PATH";
           python -m pip install --upgrade pip wheel;
     fi
 
